--- a/templates/Top/show.html.twig
+++ b/templates/Top/show.html.twig
@@ -2,7 +2,7 @@
 
 {% set title = top.name %}
 {% set subTitle = top.user.displayName %}
-{% block title %}{{ title }} - {{ subTitle }}{% endblock %}
+{% block title %}{{ title }} • {{ subTitle }}{% endblock %}
 
 {% block body %}
   <div class="panel panel-white panel-flat">
