🔧 Change & 🐛 Bug fix: Add explanations to favorite manufacturer in tooltip & harmonize other widgets (#268)
* [#263] - Fix overview's widgets tooltips

* [#238] - Add explanations to favorite manufacturer in tooltip & harmonize other widgets

* [#263] - Custom tooltip

* [#263] - Fix tooltips class

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -117,6 +117,7 @@
 @import 'components/rating.css';
 @import 'components/rating-actions.css';
 @import 'components/timeline.css';
+@import 'components/tooltip.css';
 
 // Import utilities
 @import 'icons/icons.css';
