--- a/templates/connect/login.html.twig
+++ b/templates/connect/login.html.twig
@@ -27,7 +27,7 @@
         {% endfor %}
         <form action="{{ path('login') }}" method="POST">
             <div class="form-group has-feedback has-feedback-left">
-                <input type="email" name="email" class="form-control" placeholder="Email"{% if rateLimitExceeded %} disabled{% endif %}>
+                <input type="email" name="email" class="form-control" placeholder="Email" required{% if rateLimitExceeded %} disabled{% endif %}>
                 <div class="form-control-feedback">
                     {{ ux_icon('heroicons:envelope', {'class': 'w-6 h-6 text-muted'}) }}
                 </div>
