--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -117,6 +117,7 @@
 @import 'components/rating.css';
 @import 'components/rating-actions.css';
 @import 'components/timeline.css';
+@import 'components/section-header.css';
 @import 'components/tooltip.css';
 
 // Import utilities
