allow users to delete their account

--- a/templates/Profile/settings.html.twig
+++ b/templates/Profile/settings.html.twig
@@ -115,6 +115,28 @@
             </div>
           </div>
           <!-- /settings form -->
+
+          <!-- delete account section -->
+          <div class="panel panel-flat">
+            <div class="panel-heading">
+              <h6 class="panel-title">{{ 'profile.delete_account.title'|trans }}</h6>
+            </div>
+            <div class="panel-body">
+              <p class="text-semibold">{{ 'profile.delete_account.warning'|trans }}</p>
+              <ul class="list-unstyled">
+                <li>• {{ 'profile.delete_account.immediate_logout'|trans }}</li>
+                <li>• {{ 'profile.delete_account.permanent_after_month'|trans }}</li>
+              </ul>
+              <form method="post" action="{{ path('profile_delete_account') }}" onsubmit="return confirm('{{ 'profile.delete_account.confirm'|trans }}');">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('delete_account') }}">
+                <button type="submit" class="btn btn-danger btn-labeled btn-labeled-right">
+                  <b>{{ ux_icon('heroicons:trash', {'class': 'icon-size-16'}) }}</b>
+                  {{ 'profile.delete_account.button'|trans }}
+                </button>
+              </form>
+            </div>
+          </div>
+          <!-- /delete account section -->
         </div>
       </div>
     </div>
