fixes cascade to handle image deletion

--- a/templates/Profile/settings.html.twig
+++ b/templates/Profile/settings.html.twig
@@ -27,19 +27,23 @@
               <fieldset class="content-group">
                 <legend>{{ 'profile.settings.sections.name'|trans }}</legend>
 
-                <div class="form-group">
+                <div class="form-group{% if form.firstName.vars.errors|length > 0 %} has-error{% endif %}">
                   {{ form_label(form.firstName) }}
                   {{ form_widget(form.firstName) }}
-                  {{ form_errors(form.firstName) }}
+                  {% for error in form.firstName.vars.errors %}
+                    <span class="help-block text-danger">{{ error.message }}</span>
+                  {% endfor %}
                   <small class="text-muted">
                     {{ 'profile.settings.name.change_limit'|trans }}
                   </small>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group{% if form.lastName.vars.errors|length > 0 %} has-error{% endif %}">
                   {{ form_label(form.lastName) }}
                   {{ form_widget(form.lastName) }}
-                  {{ form_errors(form.lastName) }}
+                  {% for error in form.lastName.vars.errors %}
+                    <span class="help-block text-danger">{{ error.message }}</span>
+                  {% endfor %}
                   <small class="text-muted">
                     {{ 'profile.settings.name.change_limit'|trans }}
                   </small>
