revert the distance sort in search

--- a/templates/Maps/index.html.twig
+++ b/templates/Maps/index.html.twig
@@ -23,7 +23,7 @@
         'filterConfig': {
             'map_outlet': '.map-container',
             'update_url': true,
-            'excluded_filters': ['new', 'continent', 'country']
+            'excluded_filters': ['new', 'continent', 'country', 'sortByDistance']
         }
     } only %}
 {% endblock %}
