--- a/templates/Includes/filter_sidebar.html.twig
+++ b/templates/Includes/filter_sidebar.html.twig
@@ -20,8 +20,6 @@
                 <input id="form-user" name="filters[user]" type="hidden"
                        value="{{ filters.user|default(app.user.id|default('')) }}">
                 <input id="form-ridden" name="filters[ridden]" type="hidden" value="{{ filters.ridden|default('') }}">
-                <input id="form-latitude" name="filters[latitude]" type="hidden">
-                <input id="form-longitude" name="filters[longitude]" type="hidden">
                 <input type="hidden" name="page" value="1">
 
                 <div class="category-content">
@@ -36,6 +34,23 @@
                                        {% if filters.status is defined and filters.status == "on" %} checked{% endif %}>
                             </label>
                         </div>
+                    </div>
+                    {% endif %}
+
+                    {# Sort by Distance #}
+                    {% if filterConfig.excluded_filters is not defined or 'sortByDistance' not in filterConfig.excluded_filters %}
+                    <div class="form-group toggle-switch-form-group" data-controller="toggle-switch">
+                        <div class="checkbox">
+                            <label class="display-block">
+                                {{ 'filters.sortByDistance'|trans }}
+                                <input name="filters[sortByDistance]" type="checkbox" 
+                                       data-toggle-switch-target="checkbox"
+                                       data-action="filter#toggleGeolocation toggle-switch#toggle"
+                                       {% if filters.sortByDistance is defined and filters.sortByDistance == "on" %} checked{% endif %}>
+                            </label>
+                        </div>
+                        <input type="hidden" name="filters[latitude]" data-filter-target="latitude" value="{{ filters.latitude|default('') }}">
+                        <input type="hidden" name="filters[longitude]" data-filter-target="longitude" value="{{ filters.longitude|default('') }}">
                     </div>
                     {% endif %}
 
